@startuml ERD_Warranty
!define primary_key(x) <b><u>x</u></b>
!define foreign_key(x) <i>x</i>
!define not_null(x) <b>x</b>

hide circle
skinparam linetype ortho
skinparam entity {
  BackgroundColor #FEFECE
  BorderColor #A80036
  ArrowColor #A80036
}

title Solar O&M — Warranty Management

entity "Site" as site {
  primary_key(id) : INT <<PK>>
  --
  not_null(name) : VARCHAR
  not_null(plantCode) : VARCHAR <<unique>>
}

entity "SiteWarrantySupplierItem" as wsi {
  primary_key(id) : INT <<PK>>
  --
  foreign_key(siteId) : INT <<FK>>
  not_null(category) : VARCHAR
  not_null(itemName) : VARCHAR
  supplierName : VARCHAR
  startWarranty : TIMESTAMP
  endWarranty : TIMESTAMP
  warrantyYears : FLOAT
}

entity "SiteWarrantyCustomerItem" as wci {
  primary_key(id) : INT <<PK>>
  --
  foreign_key(siteId) : INT <<FK>>
  not_null(category) : VARCHAR
  not_null(itemName) : VARCHAR
  warrantyYears : FLOAT
}

' Relationships
site ||--o{ wsi : "warranty_supplier"
site ||--o{ wci : "warranty_customer"

@enduml
